# Lidar_optimizer

./: LICENSE  README.md  data_preprocessing.py  pyproject.toml  video_process.py
data/: class_dict.csv
