[tool.poetry]
name = "lidar-optimizer"
version = "0.1.0"
description = ""
authors = ["Surikkat <Surikkatik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
natsort = "^8.4.0"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
